# platform-contracts

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/platform_contracts/: __init__.py  enums.py  versioning.py
src/platform_contracts/accounting/: account.py  classification.py  journal_entry.py  risk.py  suspense.py  transaction.py  vendor.py
src/platform_contracts/common/: identifiers.py  money.py  timestamps.py
src/platform_contracts/events/: audit_event.py  event.py
src/platform_contracts/messaging/: conversation.py  message.py  templates.py
src/platform_contracts/tax/: estimate_request.py  estimate_result.py
tests/: test_accounting_schemas.py  test_messaging_schemas.py
