[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "platform-contracts"
version = "0.1.0"
description = "Canonical Pydantic schemas for the OpenMind TransactionFlow platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/platform_contracts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
